tooling/nargo_cli/tests/snapshots/execution_success/brillig_continue_break/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VWsQ6CQAw94FAQjUYnBwcHBxc9FKMjgz9y0fAdfLqQtF7THAxQmpDe0foe70GFQLkIIGs1IhDkATmFHJJ61Bwl7M24yFPGK4n/MkWRevQJXv89BcxgGnyD+BP5b+aA864dPtWCvElzZGS9VO75mEo/3r8p9e96NGeg9Qr7FetV7HeK1SLPuZD5FpJaKaRp06Np5eEdq4H3lMI6+L2n3Frev/9Mx/LYN8SeyWPnLeYesNbAMyfe8ec2gXXs6dWshr1nyC3XQYgr7uA6Ea7jAC7l6UXffTOSEL4hPkry+WY3YHvNzuMaZyRm/RfIfHak/1O3BFcxrky5bwpdy/M/X8Ygb1Q7H9ATGprUaX8B+0WHjnLgdVZPm1d3W9mH/X6Lj+U+tUHfPT8MAX2E3QkAAA==",
  "debug_symbols": "nZNNjoQgEEbvwtqF/Cl4lU6ng4odEoKG1kkmxrtPAerowl644Ykfr6CMzKjV9fR+Gdf1H1Q9ZlR7Y615v2zfqNH0Dt7OKA8DpqgiGcIsgScUCWWCSJARJE9IKwmspAAZQSFjAKjJAVCzAPCEMmUiZTKC4ZgxgqoSQBNYAnjlsmRoO/Rr9FqHMx+6gN4G5bUbUeUmazP0o+wUF30G5SJH5SHNM6RdC4SCnbE6PC3Zv51fqwVd3ULsMj/b+NrGjKw6ZvSOL3df3tmfFJtPbp2fiK19IuQNn3K++rTAV/6Xr79vL8qT/YSZaow//dNLqOONqq1ep93kmkM6/g5bst2JwfeNbievQ6XDxYDxwcqMk+cSdvsD",
  "file_map": {
    "50": {
      "source": "fn main() {\n    // Safety: test program\n    let bug = unsafe { foo() };\n    assert(!bug);\n}\n\nunconstrained fn foo() -> bool {\n    let mut i = 0;\n    let mut bug = false;\n    loop {\n        if i == 3 {\n            break;\n            bug = true;\n        } else if i == 2 {\n            i += 1;\n            continue;\n            bug = true;\n        }\n        i += 1;\n    }\n    bug\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
