tooling/nargo_cli/tests/snapshots/execution_success/brillig_continue_break/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VWsQ6CQAw94FAQjUYnBwcHBxc9FKMjgz9y0fAdfLqQtF7THAxQmpDe0foe70GFQLkIIGs1IhDkATmFHJJ61Bwl7M24yFPGK4n/MkWRevQJXv89BcxgGnyD+BP5b+aA864dPtWCvElzZGS9VO75mEo/3r8p9e96NGeg9Qr7FetV7HeK1SLPuZD5FpJaKaRp06Np5eEdq4H3lMI6+L2n3Frev/9Mx/LYN8SeyWPnLeYesNbAMyfe8ec2gXXs6dWshr1nyC3XQYgr7uA6Ea7jAC7l6UXffTOSEL4hPkry+WY3YHvNzuMaZyRm/RfIfHak/1O3BFcxrky5bwpdy/M/X8Ygb1Q7H9ATGprUaX8B+0WHjnLgdVZPm1d3W9mH/X6Lj+U+tUHfPT8MAX2E3QkAAA==",
  "debug_symbols": "pZTNjoMgFIXfhbUL+VX7Kk3TUEsbEoKG6iSTxnefQ1FHF3ahGz7x8h0u0fAmd3Prn1frH82LnM5vcgvWOfu8uqbWnW083r5JHgfKyYllhIoEmaASioQyofqA5QlYyQGsFABqMiMcNQUgswCQWQIyAWEVgDCag1WioCAFGYhcwUeKkTJyGDIy9X7tgjGx9cVhcMRWB+M7cvK9cxn50a7/LHq12n/Y6YAqdjT+DiLwYZ2JT0P2b+fbquKjq8pZlmubbttUsFGngu/xq9mvjvp7+mdq8pniB/09+3MpR59LdcxXdE//5fT5WSkO+tWe/ovJ58Xm+b/8vfP2ZbGyL5jp2obV1TDEnGD1zZlx+uh9vah2v+1Uma6WNjS1uffBxKTF/YLxLIpMsssQd/sD",
  "file_map": {
    "50": {
      "source": "fn main() {\n    // Safety: test program\n    let bug = unsafe { foo() };\n    assert(!bug);\n}\n\nunconstrained fn foo() -> bool {\n    let mut i = 0;\n    let mut bug = false;\n    loop {\n        if i == 3 {\n            break;\n            bug = true;\n        } else if i == 2 {\n            i += 1;\n            continue;\n            bug = true;\n        }\n        i += 1;\n    }\n    bug\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
